# mechsys

./: .gitignore  CMakeLists.txt  README.txt  authors.txt
Modules/: FindBLITZ.cmake  FindCGAL.cmake  FindDEPS.cmake  FindDEPSFL.cmake  FindFLTK.cmake  FindGOTOBLAS.cmake  FindGSL.cmake  FindHDF5.cmake  FindIGRAPH.cmake  FindLocLAPACK.cmake  FindMECHSYS.cmake  FindMTL.cmake  FindMUMPS.cmake  FindPARMETIS.cmake  FindPROC.cmake  FindSCALAPACK.cmake  FindSOPLEX.cmake  FindSPHASH.cmake  FindSUPERLU.cmake  FindSUPERLUD.cmake  FindSUPERLUMT.cmake  FindTENSORS.cmake  FindTETGEN.cmake  FindTRIANGLE.cmake  FindUMFPACK.cmake  FindVORO.cmake  FindVTK.cmake
debian/: changelog  control  copyright  rules
lib/: datfiles.h  dem.h  doxymain.h  draw.h  geomtype.h  inpfile.h  matfile.h  vtkcelltype.h
lib/adlbm/: Cell.h  Domain.h  Lattice.h
lib/dem/: basic_functions.h  cylinder.h  dem.cuh  distance.h  domain.h  dompargen.h  edge.h  face.h  graph.h  gsd.h  interacton.h  particle.h  special_functions.h  torus.h  visualise.h
lib/dfn/: Domain.h  Fracture.h  Graph_x.h  Line.h  Loop.h  Math.h  Random_function.h
lib/emlbm/: Cell.h  Domain.h  Lattice.h
lib/emlbm2/: Cell.h  Domain.h  Lattice.h
lib/flbm/: Domain.h  lbm.cl  lbm.cuh
lib/lbm/: Cell.h  Dem.h  Domain.h  Dompargen.h  Interacton.h  Lattice.h
lib/lbmdem/: Domain.h  lbmdem.cuh
lib/lbmmpm/: Domain.h
lib/linalg/: jacobirot.h  laexpr.h  matrix.h  matvec.h  mumps.h  quaternion.h  sparse_crmatrix.h  sparse_matrix.h  sparse_triplet.h  superlu.h  superlud.h  umfpack.h  vector.h
lib/mesh/: alphashape.h  delaunay.h  mesh.h  paragrid3d.h  structured.h  unstructured.h
lib/mpm/: Corner.h  Domain.h  Node.h  Particle.h  mpm.cuh  shape_functions.h
lib/nn/: Domain.h
lib/numerical/: min.h  montecarlo.h  multipleroots.h  numdiff.h  odesolver.h  quadrature.h  root.h
lib/python/: msys_ana.py  msys_drawmesh.py  msys_fcrits.py  msys_fig.py  msys_invs.py  msys_linfit.py  msys_matvec.py  msys_plt.py  msys_pyshell.py
lib/sph/: Boundary_Condition.h  Domain.h  Dompargen.h  Functions.h  Particle.h
lib/util/: array.h  colors.h  fatal.h  maps.h  numstreams.h  stopwatch.h  tree.h  util.h
lib/vtk/: arrow.h  arrows.h  axes.h  cube.h  cylinder.h  disk.h  isosurf.h  line.h  plane.h  sgrid.h  sphere.h  spheres.h  text.h  text2d.h  triangulate.h  ugrid.h  win.h
patches/blitz/: do_patch.bash  funcs.h.diff  mathfunc.h.diff  range.h.diff
patches/mumps/: Makefile.inc  do_patch.bash
patches/superlumt/: do_patch.bash  install.bash  install_makefile.diff  make.pthreads  pctest.bash  pdtest.bash  pstest.bash  pztest.bash  test.bash  testing_makefile.diff
patches/tetgen/: do_patch.bash  makefile.diff  tetgen1.4.3.cxx.diff  tetgen1.4.3.h.diff
patches/triangle/: do_patch.bash  makefile.diff  triangle.c.diff  triangle.h.diff
patches/voro/: CMakeLists.txt  cell0.3.hh.diff  container0.3.hh.diff  do_patch.bash  src_CMakeLists.txt
scripts/: additional_installations.bash  install_apt_deps.bash  install_compile_deps.bash  install_flashlite.bash  pov2avi.bash
scripts/old/: 01_create_mechsys_deb.sh  02_gen_repository.sh  Clear_output.sh  Png2Avi.sh  Reset_cmake.sh  autocrop_convert_eps.bash  change_header.sh  change_includes.sh  compile_paraprof.sh  count_lines.sh  do_compile_deps.sh  install_compile_deps_dem.bash  ubuntu_blender_links.sh  ubuntu_deps.sh  ubuntu_python_links.sh
src/: CMakeLists.txt  dem_genpack.cpp  dem_joinres.cpp  dem_viewpack.cpp  dem_viewres.cpp  mechsys.cpp  run_genpack_paper.py
tadlbm/: CMakeLists.txt  tadlbm01.cpp  tadlbm02.cpp  tadlbm03.cpp  tadlbm04.cpp
tdem/: CMakeLists.txt  GSD.cpp  Rawbucket.msh  Rawbucket.py  box.msh  brazil.inp  brazil_test.cpp  brick.cpp  bucket.msh  cylinder_test.cpp  log.txt  mysoil.gsd  nonconvex.cpp  perana.m  plot_res.py  roseMod.m  spherobar.m  tbeam.inp  test_01.cpp  test_02.cpp  test_beam.cpp  test_comm01.cpp  test_comm02.cpp  test_cu_01.cu  test_cu_02.cu  test_cu_03.cu  test_cu_04.cu  test_distances.cpp  test_domain.cpp  test_dynamics.cpp  test_mesh.cpp  test_periodic.cpp  test_read.cpp  test_tetrahedra.cpp  test_write.cpp  tmass.inp  tper.inp  tper_hertz.inp  tpercu.inp  ttt.cpp  (+3 more)
tdfn/: CMakeLists.txt  tdfn01.cpp  tdfn01.inp
temlbm/: CMakeLists.txt  temlbm01.cpp  temlbm02.cpp  temlbm03.cpp
temlbm2/: CMakeLists.txt  temlbm201.cpp  temlbm202.cpp  temlbm203.cpp  temlbm204.cpp  temlbm205.cpp
tflbm/: CMakeLists.txt  tclbm01.cu  tclbm02.cu  tclbm03.cu  tclbm05.cu  tclbm06.cu  tclbm07.cu  tclbm08.cu  tclbm09.cu  tflbm01.cpp  tflbm02.cpp  tflbm03.cpp  tflbm04.cpp  tflbm05.cpp
tlbm/: CMakeLists.txt  bubble.cpp  column.cpp  cylinder.cpp  dam.cpp  graph.py  magnus.cpp  multicomp.cpp  porous.cpp  single.cpp  swell.inp  test.msh  tlbm01.cpp  tlbm02.cpp  tlbm03.cpp  tlbm04.cpp  tlbm05.cpp  tlbm06.cpp  tlbm07.cpp  tlbm08.cpp  tlbm08.inp  tlbm09.cpp
tlbmdem/: CMakeLists.txt  tlbmdem01.cpp  tlbmdem02.cpp  tlbmdem_cu_01.cu  tlbmdem_cu_02.cu  tlbmdem_cu_03.cu  tlbmdem_cu_04.cu
tlbmmpm/: CMakeLists.txt  tlbmmpm01.cpp  tlbmmpm02.cpp  tlbmmpm03.cpp
tmpm/: CMakeLists.txt  ana.m  expressions.xml  fish.msh  tmpm01.cpp  tmpm02.cpp  tmpm03.cpp  tmpm_cu_01.cu
tnn/: CMakeLists.txt  tnn01.cpp  tnn02.cpp  tnn03.cpp  tnn04.cpp
tsph/: CMakeLists.txt  test01.cpp  test01.inp  test02.cpp  test03.cpp  test04.cpp  test05.cpp  test06.cpp  test07.cpp  test08.cpp  test09.cpp
